# Kleptic

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  build.sh
example/: CMakeLists.txt  echo_server.cxx  http_server.cxx  httpd.cxx  parse_mime.cxx
src/: CMakeLists.txt  app.hxx  base64.cxx  base64.hxx  bqueue.hxx  concurrency.cxx  concurrency.hxx  error.hxx  handler.cxx  handler.hxx  http.cxx  http.hxx  logger.cxx  logger.hxx  mime_types.cxx  mime_types.hxx  router.cxx  router.hxx  server.cxx  server.hxx  socket.cxx  socket.hxx  strutil.hxx  sysv_ipc.cxx  sysv_ipc.hxx  tcp_sock.cxx  tcp_sock.hxx  template.cxx  template.hxx  tls_sock.cxx  tls_sock.hxx
templates/: static.html.ktf
